deploy/kubernetes/observability/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jstore-observability
  labels:
    app.kubernetes.io/part-of: j-store
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
